update gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -19,4 +19,4 @@ applications/*/Output*/
 applications/*/old/
 applications/*/old/
 applications/IP-SIAug17/AcousticWave/plotmediumparameters/
-applications/IP-SIAug17/AcousticWave/exple_poisson/
+applications/IP-SIAug17/AcousticWave/exple_*/
