--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ applications/*/old/
 applications/*/old/
 applications/IP-SIAug17/AcousticWave/plotmediumparameters/
 applications/IP-SIAug17/AcousticWave/exple_*/
+applications/IP-SIAug17/AcousticWave/archive*/
+applications/IP-SIAug17/PoissonPoisson/output/
