--- a/.gitignore
+++ b/.gitignore
@@ -21,4 +21,5 @@ applications/*/old/
 applications/IP-SIAug17/AcousticWave/plotmediumparameters/
 applications/IP-SIAug17/AcousticWave/exple_*/
 applications/IP-SIAug17/AcousticWave/archive*/
+applications/IP-SIAug17/AcousticWave/joint_poisson-acoustic/
 applications/IP-SIAug17/PoissonPoisson/output/
