--- a/.gitignore
+++ b/.gitignore
@@ -20,5 +20,7 @@ applications/*/old/
 applications/*/old/
 applications/IP-SIAug17/AcousticWave/plotmediumparameters/
 applications/IP-SIAug17/AcousticWave/exple_*/
+applications/IP-SIAug17/AcousticWave/joint_*/
 applications/IP-SIAug17/AcousticWave/archive*/
 applications/IP-SIAug17/PoissonPoisson/output/
+applications/vtvpaper/*-reconstructions-*/
